Complete Banana Bars page

--- a/recipes/Banana Snickerdoodle Bars.html
+++ b/recipes/Banana Snickerdoodle Bars.html
@@ -46,10 +46,17 @@
 
     <h2>Steps</h2>
     <ol>
-        <strong>Step 1</strong>
-        <li>In a medium bowl, mix together the chicken pieces and garlic. Toss with the flour just to coat, and shake off excess.</li>
-        <strong>Step 2</strong>
-        <li>Heat the margarine in a large skillet over medium-high heat. Add the chicken pieces; cook and stir until browned. Add the mint leaves and lemon juice, cover and steam for about 5 minutes, just until the chicken is cooked through. Do not over cook the chicken or it will be tough.</li>
+       <li>Preheat the oven to 350 degrees F (175 degrees C). Line an 8x8-inch square pan with enough parchment paper to have overhang on all sides.</li>
+
+       <li>Whisk flour, cream of tartar, baking soda, salt, 1/4 teaspoon cinnamon, and nutmeg together in a bowl.</li>
+
+       <li>Beat butter, 1/2 cup white sugar, and brown sugar in a large bowl with an electric mixer until light and fluffy. Beat in banana and vanilla extract on low speed until thoroughly combined; mix in flour mixture just until dough comes together. Using lightly floured hands, press dough firmly and evenly into the bottom of the prepared pan.</li>
+
+       <li>Whisk together the 1 tablespoon white sugar and 1/2 teaspoon cinnamon; sprinkle cinnamon sugar evenly over the dough.</li>
+
+       <li>Bake in the preheated oven just until the dough in the center of the pan feels set when lightly touched with a finger, about 25 minutes.</li>
+
+       <li>Let bars cool in the pan for 10 minutes before removing to a wire rack to cool completely. Cut into 16 bars.</li>
     </ol>
 </body>
 </html>
