--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Document</title>
 </head>
 <body>
+    
     <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="recipes/mint-chicken.html">Mint Chicken</a></li>
+        <li><a href="recipes/Miso Beef Noodles.html">Miso Beef Noodles</a></li>
+        <li><a href="recipes/Banana Snickerdoodle Bars.html">Mint Chicken</a></li>
+    </ul>
+
 </body>
 </html>
