Add return links to the recipe pages

--- a/recipes/Banana Snickerdoodle Bars.html
+++ b/recipes/Banana Snickerdoodle Bars.html
@@ -7,6 +7,8 @@
     <title>Banana Snickerdoodle Bars</title>
 </head>
 <body>
+
+    <a href="../index.html">Go Home</a><br>
     <h1>Mint Chicken Recipe</h1>
     <img src="https://www.allrecipes.com/thmb/sUsagStEOkDW0brFsCXJN4wMn2Y=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/BananaSnickerdoodleBarsKim-0507df9abbd84200ae0d8eba6555da36.jpg" alt="photo of finished Banana Snickerdoodle Bars">
     
