--- a/recipes/Miso Beef Noodles.html
+++ b/recipes/Miso Beef Noodles.html
@@ -7,6 +7,8 @@
     <title>Miso Beef Noodles</title>
 </head>
 <body>
+
+    <a href="../index.html">Go Home</a><br>
     <h1>Miso Beef Noodles</h1>
     <img src="https://www.allrecipes.com/thmb/OjmCCHa8_lKE77cNzmrlcceIQ-M=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/MisoBeefNoodlesChefJohn-694690eacd8e445eaa965c8bcd64b4bb.jpg" alt="photo of Miso Beef Noodles">
     
