--- a/recipes/mint-chicken.html
+++ b/recipes/mint-chicken.html
@@ -7,6 +7,7 @@
     <title>Mint Chicken</title>
 </head>
 <body>
+    <a href="../index.html">Go Home</a><br>
     <h1>Mint Chicken Recipe</h1>
     <img src="https://www.allrecipes.com/thmb/4hCpSEfOKSkLox1xppVSUSZ42MQ=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Mint_Chicken_010-2000-4ca7a46e70264a799ae9862d78515098.jpg" alt="photo of finished mint chicken">
     
