--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin recipes</title>
 </head>
 <body>
-    
+
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/mint-chicken.html">Mint Chicken</a></li>
         <li><a href="recipes/Miso Beef Noodles.html">Miso Beef Noodles</a></li>
-        <li><a href="recipes/Banana Snickerdoodle Bars.html">Mint Chicken</a></li>
+        <li><a href="recipes/Banana Snickerdoodle Bars.html">Banana Snickerdoodle Bars</a></li>
     </ul>
 
 </body>
